--- a/.github/workflows/todo-list-pages.yml
+++ b/.github/workflows/todo-list-pages.yml
@@ -27,26 +27,23 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: |
-            virt_frontend/mvvm-tools/package-lock.json
-            mvvm-tools-example/todo-list/package-lock.json
 
-      - name: Install and build mvvm-tools
-        working-directory: virt_frontend/mvvm-tools
+      - name: Install and build mvvm-toolkit
+        working-directory: .
         run: |
-          npm ci
+          npm install
           npm run build
 
       - name: Install and build todo-list
-        working-directory: mvvm-tools-example/todo-list
+        working-directory: examples/todo-list
         run: |
-          npm ci
+          npm install
           npm run build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: mvvm-tools-example/todo-list/dist
+          path: examples/todo-list/dist
 
   deploy:
     needs: build
