--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "lodash": "^4.17.21",
     "mobx": "^6.15.0",
     "mobx-react": "^9.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.2.2",
     "typescript": "^5.8.2"
   },
@@ -58,6 +60,9 @@
     "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "jsdom": "^24.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tslib": "^2.7.0",
     "vite": "^7.3.0",
     "vite-plugin-checker": "^0.9.1",
