--- a/.github/workflows/todo-list-pages.yml
+++ b/.github/workflows/todo-list-pages.yml
@@ -43,6 +43,16 @@ jobs:
       - name: Prepare Pages site
         run: |
           rm -rf site
+          mkdir -p site
+
+      - name: Build docs (Jekyll)
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: docs
+          destination: site/docs
+
+      - name: Add examples to site
+        run: |
           mkdir -p site/examples/todo-list
           cp examples/index.html site/index.html
           cp examples/index.css site/index.css
