--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: mvvm-toolkit docs
-description: Documentation and usage examples for mvvm-toolkit.
-baseurl: "/mvvm-toolkit/docs"
+title: rvm-toolkit docs
+description: Documentation and usage examples for rvm-toolkit.
+baseurl: "/rvm-toolkit/docs"
 theme: minima
