--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -43,10 +43,9 @@ jobs:
       - name: Install and build microfronts
         working-directory: examples/microfronts
         run: |
-          npm install --include=optional --no-package-lock
           cd ./auchan && npm install --include=optional --no-package-lock && npm run build:federation
-          cd ./5ka && npm install --include=optional --no-package-lock && npm run build:federation
-          npm run build:federation
+          cd ../5ka && npm install --include=optional --no-package-lock && npm run build:federation
+          cd ../ && npm install --include=optional --no-package-lock && npm run build:federation
 
       - name: Prepare Pages site
         run: |
