--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Add examples to site
         run: |
           mkdir -p site/examples/todo-list
+          mkdir -p site/examples/microfronts
           cp examples/index.html site/index.html
           cp examples/index.css site/index.css
           cp -R examples/todo-list/dist/. site/examples/todo-list/
