--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -66,6 +66,7 @@ jobs:
           cp examples/index.css site/index.css
           cp -R examples/todo-list/dist/. site/examples/todo-list/
           cp -R examples/microfronts/dist/. site/examples/microfronts/
+          cp -R examples/microfronts/dist/microfront/. site/examples/microfronts/microfront
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
