--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -62,11 +62,12 @@ jobs:
         run: |
           mkdir -p site/examples/todo-list
           mkdir -p site/examples/microfronts
+          mkdir -p site/examples/microfronts/microfront
           cp examples/index.html site/index.html
           cp examples/index.css site/index.css
           cp -R examples/todo-list/dist/. site/examples/todo-list/
           cp -R examples/microfronts/dist/. site/examples/microfronts/
-          cp -R examples/microfronts/dist/microfront/. site/examples/microfronts/microfront
+          cp -R examples/microfronts/dist/microfront/. site/examples/microfronts/microfront/
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
